...
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGE-dX-KX0">
                                                <rect key="frame" x="70" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="3qV-oA-DMb"/>
                                                    <constraint firstAttribute="width" constant="50" id="cc8-1r-rFi"/>
                                                </constraints>
                                                <state key="normal" backgroundImage="divide"/>
                                                <connections>
                                                    <action selector="onDividedPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R4s-qq-5XS"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esA-cq-FjX">
                                                <rect key="frame" x="140" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="lXU-cz-rVs"/>
                                                    <constraint firstAttribute="width" constant="50" id="x1k-ey-8Nz"/>
                                                </constraints>
                                                <state key="normal" backgroundImage="multiply"/>
                                                <connections>
                                                    <action selector="onMultiplyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bvj-z5-8B5"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dmn-3K-M5a">
                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="0hG-Ix-rln"/>
                                                    <constraint firstAttribute="height" constant="50" id="bDM-Ro-qmx"/>
                                                </constraints>
                                                <state key="normal" backgroundImage="subtract"/>
                                                <connections>
                                                    <action selector="onSubtractPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JQ3-19-YGN"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50v-5s-bng">
                                                <rect key="frame" x="70" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="4Ue-xb-Z49"/>
                                                    <constraint firstAttribute="width" constant="50" id="Fx5-XD-Jyn"/>
                                                </constraints>
                                                <state key="normal" backgroundImage="add"/>
                                                <connections>
                                                    <action selector="onAddPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2ec-3M-RoB"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ItH-jf-rdl">
                                                <rect key="frame" x="140" y="0.0" width="50" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="VgO-Jx-cQ2"/>
                                                    <constraint firstAttribute="height" constant="50" id="og8-Uw-WUl"/>
                                                </constraints>
                                                <state key="normal" backgroundImage="equal"/>
                                                <connections>
                                                    <action selector="onEqualsPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lZe-3P-gps"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
